containers/Login/scss: fix username display when too long to fit under avatar

--- a/src/containers/Login/Login.module.scss
+++ b/src/containers/Login/Login.module.scss
@@ -40,7 +40,6 @@
   }
 
   .user {
-    margin: auto;
     cursor: pointer;
     text-decoration: none;
   }
